[FIX] position z-index

--- a/client/src/app/components/canvas-diagram/diagram/diagram.component.scss
+++ b/client/src/app/components/canvas-diagram/diagram/diagram.component.scss
@@ -1,9 +1,9 @@
-.diagram{
-  position: absolute;
-  inset: 0;
+#diagram-div {
+    position: absolute;
+    inset: 0;
 
-  min-block-size: 100%;
-  max-block-size: 100%;
-  min-inline-size: 100%;
-  max-inline-size: 100%;
+    min-block-size: 100%;
+    max-block-size: 100%;
+    min-inline-size: 100%;
+    max-inline-size: 100%;
 }
